Update REST service link in HTML

--- a/test-rest/index.html
+++ b/test-rest/index.html
@@ -25,7 +25,7 @@
 		<div id = "title">
 			<h1>TEST REST</h1>
 		</div>
-		<a id="globe" target="_blank" href="https://lio.milwaukeecounty.org/arcgis/rest/services/Historical/Sanborn1910_32054/MapServer/">REST SERVICE</a>
+		<a id="globe" target="_blank" href="http://webgis.uwm.edu/arcgisuwm/rest/services/AGSL/SanbornTest/MapServer/">REST SERVICE</a>
 
 
 
