Add sheet boundaries in WGS84

--- a/test-rest/index.html
+++ b/test-rest/index.html
@@ -30,15 +30,14 @@
 
 <body>
     <div class="custom-popup" id="map"></div>
+    
     <div id="title">
         <h1>TEST REST</h1>
     </div>
+    
     <a id="globe" target="_blank" href="http://webgis.uwm.edu/arcgisuwm/rest/services/AGSL/SanbornTest/MapServer/">REST SERVICE</a>
 
-    <script type="text/javascript" src="js/main.js">
-
-
-    </script>
+    <script type="text/javascript" src="js/main.js"></script>
 
 
 </body>
