Remove broken link

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
 
 
     <!-- JQUERY -->
-    <script type="text/javascript" src="lib/jquery/jquery-3.1.1.js"></script>
+<!--    <script type="text/javascript" src="lib/jquery/jquery-3.1.1.js"></script>-->
 
 
     <!-- GOOGLE MAPS API & GEOSEARCH JS (FOR SEARCHING ADDRESSES) -->
+<!--
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBo-ggpJr485oHzwkfLkI-j8t6Z1nTrDV0"></script>
     <script type="text/javascript" src="lib/geosearch/geosearch.js"></script>
+-->
 
 
     <!-- RESPONSIVE POPUP PLUGIN (MAKES POPUPS CENTER CORRECTLY ON MOBILE) -->
@@ -47,6 +49,9 @@
     <!-- Proj4 and Proj4Leaflet -->
     <script src="https://unpkg.com/proj4@2.4.3"></script>
     <script src="https://unpkg.com/proj4leaflet@1.0.1"></script>
+    
+                <!-- LINK TO MAIN JAVASCRIPT-->
+            <script type="text/javascript" src="js/main.js"></script>
 
 
 </head>
@@ -55,7 +60,6 @@
 
     <!-- CREATE MAP -->
     <div class="custom-popup" id="map"></div>
-
 
     <!-- HEADER TITLE -->
     <div id="title">
@@ -82,9 +86,6 @@
 	
     <!-- LINK TO DIGITAL COLLECTIONS -->
     <a id="uwm-website" target="_blank" href="http://uwm.edu/lib-collections/sanborn/">UWM Digital Collections</a>
-
-            <!-- LINK TO MAIN JAVASCRIPT-->
-            <script type="text/javascript" src="js/main.js"></script>
 
 </body>
 
