--- a/index.html
+++ b/index.html
@@ -34,17 +34,14 @@
     <script src="https://unpkg.com/leaflet-responsive-popup@0.2.0/leaflet.responsive.popup.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet-responsive-popup@0.2.0/leaflet.responsive.popup.css" />
 
-    <!-- Load Esri Leaflet from CDN -->
+    <!-- ESRI LEAFLET -->
     <script src="https://unpkg.com/esri-leaflet@2.1.3/dist/esri-leaflet.js" integrity="sha512-pijLQd2FbV/7+Jwa86Mk3ACxnasfIMzJRrIlVQsuPKPCfUBCDMDUoLiBQRg7dAQY6D1rkmCcR8286hVTn/wlIg==" crossorigin=""></script>
 
-    <!-- Esri Leaflet Geocoder -->
+    <!-- ESRI LEAFLET GEOCODER -->
     <link rel="stylesheet" href="https://unpkg.com/esri-leaflet-geocoder@2.2.9/dist/esri-leaflet-geocoder.css">
     <script src="https://unpkg.com/esri-leaflet-geocoder@2.2.8"></script>
 
-    <!-- Include jQuery libraries -->
-    <script type="text/javascript" src="lib/jquery/jquery-3.1.1.js"></script>
-
-    <!-- Proj4 and Proj4Leaflet -->
+    <!-- PROJ4 & PROJ4LEAFLET-->
     <script src="https://unpkg.com/proj4@2.4.3"></script>
     <script src="https://unpkg.com/proj4leaflet@1.0.1"></script>
 
@@ -68,13 +65,19 @@
 
     <!-- NAVBAR LINKS-->
     <div id="top-buttons">
-        <div id="about-button"><a href="https://uwm.edu/lib-collections/sanborn/">DATA</a></div>
-        <div id="about-button"><a href="https://uwm.edu/lib-collections/sanborn/">ABOUT</div>
-		<div id = "menu-icon"> 
-			<div class = "hamburger"></div>
-			<div class = "hamburger"></div>
-			<div class = "hamburger"></div>
-		</div>	
+        <div id = "about-button"><a href="https://uwm.edu/lib-collections/sanborn/">DATA</a></div>
+        <div id = "about-button"><a href="https://uwm.edu/lib-collections/sanborn/">ABOUT</div>
+        <div class="dropdown">
+            <div id = "menu-icon">
+                <div class = "hamburger"></div>
+                <div class = "hamburger"></div>
+                <div class = "hamburger"></div>
+            </div>
+            <div class="dropdown-content">
+                <a href="https://uwm.edu/lib-collections/sanborn/">About</a>
+                <a href="https://uwm.edu/lib-collections/sanborn/">Data</a>
+            </div>
+        </div>
     </div>
         
     <!-- SEARCH BOX -->
@@ -83,8 +86,8 @@
     <!-- LINK TO DIGITAL COLLECTIONS -->
     <a id="uwm-website" target="_blank" href="http://uwm.edu/lib-collections/sanborn/">UWM Digital Collections</a>
 
-            <!-- LINK TO MAIN JAVASCRIPT-->
-            <script type="text/javascript" src="js/main.js"></script>
+    <!-- LINK TO MAIN JAVASCRIPT-->
+    <script type="text/javascript" src="js/main.js"></script>
 
 </body>
 
