put jquery back in index

--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
     <script type="text/javascript" src="lib/leaflet/leaflet-src.js"></script>
 
 
-    <!-- JQUERY -->
-<!--    <script type="text/javascript" src="lib/jquery/jquery-3.1.1.js"></script>-->
+     JQUERY
+    <script type="text/javascript" src="lib/jquery/jquery-3.1.1.js"></script>
 
 
     <!-- GOOGLE MAPS API & GEOSEARCH JS (FOR SEARCHING ADDRESSES) -->
-<!--
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBo-ggpJr485oHzwkfLkI-j8t6Z1nTrDV0"></script>
     <script type="text/javascript" src="lib/geosearch/geosearch.js"></script>
--->
+
 
 
     <!-- RESPONSIVE POPUP PLUGIN (MAKES POPUPS CENTER CORRECTLY ON MOBILE) -->
@@ -47,8 +46,8 @@
     <script src="https://unpkg.com/proj4@2.4.3"></script>
     <script src="https://unpkg.com/proj4leaflet@1.0.1"></script>
     
-                <!-- LINK TO MAIN JAVASCRIPT-->
-            <script type="text/javascript" src="js/main.js"></script>
+    <!-- LINK TO MAIN JAVASCRIPT-->
+    <script type="text/javascript" src="js/main.js"></script>
 
 
 </head>
