--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="lib/leaflet/leaflet-src.js"></script>
 
 
-     JQUERY
+     <! -- JQUERY -->
     <script type="text/javascript" src="lib/jquery/jquery-3.1.1.js"></script>
 
 
