--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
     <!-- BOILERPLATE HTML -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/> <!--320-->
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>1910 Milwaukee</title>
 
