Updating info-window buttons

--- a/index.html
+++ b/index.html
@@ -68,15 +68,28 @@
 
     <!-- NAVBAR LINKS-->
     <div id="top-buttons">
-        <div id = "about-button"><a href="https://uwm.edu/lib-collections/sanborn/">DATA</a></div>
-        <div id = "about-button"><a href="https://uwm.edu/lib-collections/sanborn/">ABOUT</div>
-        <div class="dropdown">
-            <div class="dropdown-content">
-                <a href="https://uwm.edu/lib-collections/sanborn/">About</a>
-                <a href="https://uwm.edu/lib-collections/sanborn/">Data</a>
-            </div>
+        <div class = "mobile-buttons">
+            <div id = "data-button">Data</div>
+            <div id = "about-button">About</div>
+        <!--<div class="mobile-buttons">-->
+            <!--<div class="vertical-links">-->
+                <!--<a href="https://uwm.edu/lib-collections/sanborn/">About</a>-->
+                <!--<a href="https://uwm.edu/lib-collections/sanborn/">Data</a>-->
+            <!--</div>-->
+        <!--</div>-->
         </div>
     </div>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>Some text in the Modal..</p>
+        </div>
+
+    </div>
+
         
     <!-- SEARCH BOX -->
     <div id="geocoder-control-input" type="text" placeholder="Search for an address" autocomplete="true"></div>
