--- a/index.html
+++ b/index.html
@@ -71,24 +71,30 @@
         <div class = "mobile-buttons">
             <div id = "data-button">Data</div>
             <div id = "about-button">About</div>
-        <!--<div class="mobile-buttons">-->
-            <!--<div class="vertical-links">-->
-                <!--<a href="https://uwm.edu/lib-collections/sanborn/">About</a>-->
-                <!--<a href="https://uwm.edu/lib-collections/sanborn/">Data</a>-->
-            <!--</div>-->
-        <!--</div>-->
         </div>
     </div>
 
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
-        <!-- Modal content -->
+    <!-- ABOUT MODAL -->
+    <div id="about-modal" class="modal">
+        <!-- ABOUT MODAL CONTENT -->
         <div class="modal-content">
-            <span class="close">&times;</span>
-            <p>Some text in the Modal..</p>
+            <span class="close-about">&times;</span>
+            <p>Placeholder element for development. </p>
+            <p>Information about Sanborns, AGSL & project to project will go here.</p>
         </div>
-
     </div>
+
+
+    <!-- DATA MODAL -->
+    <div id="data-modal" class="modal">
+        <!-- ABOUT MODAL CONTENT -->
+        <div class="modal-content">
+            <span class="close-data">&times;</span>
+            <p>Placeholder element for development. </p>
+            <p>Information about community-generated GIS data will go here.</p>
+        </div>
+    </div>
+
 
         
     <!-- SEARCH BOX -->
