--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="modal-content">
             <span class="close-about">&times;</span>
             <p>Placeholder element for development. </p>
-            <p>Information about Sanborns, AGSL & project to project will go here.</p>
+            <p>Information about Sanborns, AGSL & project will go here.</p>
         </div>
     </div>
 
