add placeholder button for adding a point

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
     <!-- CREATE MAP -->
     <div class="custom-popup" id="map"></div>
 
+    <!-- SEARCH BOX -->
+    <div id="geocoder-control-input" type="text" placeholder="Search for an address" autocomplete="true"></div>
+
     <!-- HEADER TITLE -->
     <div id="title">
         <h1>SANBORN MAPS OF MILWAUKEE 1910</h1>
@@ -65,6 +68,13 @@
     <div id="mobile-title">
         <h1>SANBORN MAPS <br> MILWAUKEE 1910</h1>
     </div>
+
+
+    <!-- BUTTON TO ADD A POINT -->
+    <a id="add-a-point" href="#">
+        <div id = "cross"></div>
+    </a>
+
 
     <!-- NAVBAR LINKS-->
     <div id="top-buttons">
@@ -83,6 +93,7 @@
             <p>Information about Sanborns, AGSL & project will go here.</p>
         </div>
     </div>
+    <!-- ABOUT MODAL ENDS HERE (THESE ARE GOING TO BE LONG) -->
 
 
     <!-- DATA MODAL -->
@@ -94,11 +105,8 @@
             <p>Information about community-generated GIS data will go here.</p>
         </div>
     </div>
+    <!-- DATA MODAL ENDS HERE (THESE ARE GOING TO BE LONG) -->
 
-
-        
-    <!-- SEARCH BOX -->
-    <div id="geocoder-control-input" type="text" placeholder="Search for an address" autocomplete="true"></div>
 
 
     <!-- LINK TO MAIN JAVASCRIPT-->
