--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <!-- BOILERPLATE HTML -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/> <!--320-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+    <!--320-->
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>1910 Milwaukee</title>
 
@@ -24,7 +25,7 @@
 
 
     <!-- GOOGLE MAPS API & GEOSEARCH JS (FOR SEARCHING ADDRESSES) -->
-<!--
+    <!--
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBo-ggpJr485oHzwkfLkI-j8t6Z1nTrDV0&libraries=places"></script>
     <script type="text/javascript" src="lib/geosearch/geosearch.js"></script>
 -->
@@ -37,7 +38,7 @@
 
     <!-- ESRI LEAFLET -->
     <script src="https://unpkg.com/esri-leaflet@2.1.3/dist/esri-leaflet.js" integrity="sha512-pijLQd2FbV/7+Jwa86Mk3ACxnasfIMzJRrIlVQsuPKPCfUBCDMDUoLiBQRg7dAQY6D1rkmCcR8286hVTn/wlIg==" crossorigin=""></script>
-    
+
     <!-- ESRI LEAFLET GEOCODER -->
     <link rel="stylesheet" href="https://unpkg.com/esri-leaflet-geocoder@2.2.9/dist/esri-leaflet-geocoder.css">
     <script src="https://unpkg.com/esri-leaflet-geocoder@2.2.8"></script>
@@ -54,7 +55,7 @@
 
 <body>
 
-    <!-- CREATE MAP -->
+    <!-- MAP -->
     <div class="custom-popup" id="map"></div>
 
     <!-- SEARCH BOX -->
@@ -69,20 +70,29 @@
         <h1>SANBORN MAPS <br> MILWAUKEE 1910</h1>
     </div>
 
+    <!-- OPACITY SLIDER -->
+    <div id="opacity-slider">
+        <label>
+            <span class="min">0%</span>
+            <span class="max">100%</span>
+            <input type="range" min="0" max="100" value="100" step="1" class="opacity-slider" title="Click and drag the slider to change the opacity of the historic maps">
+        </label>
+    </div>
 
     <!-- BUTTON TO ADD A POINT -->
     <a id="add-a-point" href="#">
-        <div id = "cross"></div>
+        <div id="cross"></div>
     </a>
 
 
     <!-- NAVBAR LINKS-->
     <div id="top-buttons">
-        <div class = "mobile-buttons">
-            <div id = "data-button">Data</div>
-            <div id = "about-button">About</div>
+        <div class="mobile-buttons">
+            <div id="data-button">Data</div>
+            <div id="about-button">About</div>
         </div>
     </div>
+    
 
     <!-- ABOUT MODAL -->
     <div id="about-modal" class="modal">
@@ -106,7 +116,6 @@
         </div>
     </div>
     <!-- DATA MODAL ENDS HERE (THESE ARE GOING TO BE LONG) -->
-
 
 
     <!-- LINK TO MAIN JAVASCRIPT-->
