add text to data window

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             <span class="close-data">&times;</span>
             <p>Placeholder element for development. </p>
             <p>Information about community-generated GIS data will go here.</p>
+            <p>We want to know what you want to tell us about your city.</p>
         </div>
     </div>
     <!-- DATA MODAL ENDS HERE (THESE ARE GOING TO BE LONG) -->
