--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <!-- HEADER TITLE -->
     <div id="title">
-        <h1>SANBORN MAPS OF MILWAUKEE 1910</h1>
+        <h1>SANBORN MAPS OF MILWAUKEE mobile</h1>
     </div>
 
     <div id="mobile-title">
