--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
     <! -- JQUERY -->
     <script type="text/javascript" src="lib/jquery/jquery-3.1.1.js"></script>
 
+    <! -- TOUCH EVENT LIBRARY -->
+    <script src="http://domain.ltd/path/jquery.finger.js"></script>
+
     <!-- PROJ4 & PROJ4LEAFLET-->
     <script src="https://unpkg.com/proj4@2.4.3"></script>
     <script src="https://unpkg.com/proj4leaflet@1.0.1"></script>
@@ -63,7 +66,7 @@
 
     <!-- HEADER TITLE -->
     <div id="title">
-        <h1>SANBORN MAPS OF MILWAUKEE mobile</h1>
+        <h1>SANBORN MAPS OF MILWAUKEE mobile1</h1>
     </div>
 
     <div id="mobile-title">
