--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <script type="text/javascript" src="lib/jquery/jquery-3.1.1.js"></script>
 
     <! -- TOUCH EVENT LIBRARY -->
-    <script src="http://domain.ltd/path/jquery.finger.js"></script>
+    <script src="//rawgit.com/ngryman/jquery.finger/v0.1.2/dist/jquery.finger.js"></script>
 
     <!-- PROJ4 & PROJ4LEAFLET-->
     <script src="https://unpkg.com/proj4@2.4.3"></script>
@@ -66,7 +66,7 @@
 
     <!-- HEADER TITLE -->
     <div id="title">
-        <h1>SANBORN MAPS OF MILWAUKEE mobile1</h1>
+        <h1>SANBORN MAPS OF MILWAUKEE mobile2</h1>
     </div>
 
     <div id="mobile-title">
