--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <! -- JQUERY -->
     <script type="text/javascript" src="lib/jquery/jquery-3.1.1.js"></script>
 
-    <! -- TOUCH EVENT LIBRARY -->
-    <script src="//rawgit.com/ngryman/jquery.finger/v0.1.2/dist/jquery.finger.js"></script>
+    <!--<! &#45;&#45; TOUCH EVENT LIBRARY &ndash;&gt;-->
+    <!--<script src="//rawgit.com/ngryman/jquery.finger/v0.1.2/dist/jquery.finger.js"></script>-->
 
     <!-- PROJ4 & PROJ4LEAFLET-->
     <script src="https://unpkg.com/proj4@2.4.3"></script>
@@ -66,7 +66,7 @@
 
     <!-- HEADER TITLE -->
     <div id="title">
-        <h1>SANBORN MAPS OF MILWAUKEE mobile3</h1>
+        <h1>SANBORN MAPS OF MILWAUKEE mobile4</h1>
     </div>
 
     <div id="mobile-title">
