Add layer control

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
     <!-- ESRI LEAFLET GEOCODER -->
     <link rel="stylesheet" href="https://unpkg.com/esri-leaflet-geocoder@2.2.9/dist/esri-leaflet-geocoder.css">
-    <script src="https://unpkg.com/esri-leaflet-geocoder@2.2.8"></script>
+    <script src="https://unpkg.com/esri-leaflet-geocoder@2.2.8"></script>5
 
-    <! -- JQUERY -->
+    <!-- JQUERY -->
     <script type="text/javascript" src="lib/jquery/jquery-3.1.1.js"></script>
 
     <!--<! &#45;&#45; TOUCH EVENT LIBRARY &ndash;&gt;-->
