--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <!-- HEADER TITLE -->
     <div id="title">
-        <h1>SANBORN MAPS OF MILWAUKEE mobile6</h1>
+        <h1>SANBORN MAPS OF MILWAUKEE </h1>
     </div>
 
     <div id="mobile-title">
@@ -82,10 +82,10 @@
         </label>
     </div>
 
-    <!-- BUTTON TO ADD A POINT -->
-    <a id="add-a-point" href="#">
-        <div id="cross"></div>
-    </a>
+    <!--&lt;!&ndash; BUTTON TO ADD A POINT &ndash;&gt;-->
+    <!--<a id="add-a-point" href="#">-->
+        <!--<div id="cross"></div>-->
+    <!--</a>-->
 
 
     <!-- NAVBAR LINKS-->
