--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
 
     <div id="mobile-title">
-        <h1>SANBORN MAPS <br> MILWAUKEE 1910</h1>
+        <h1>SANBORN MAPS <br> MILWAUKEE</h1>
     </div>
 
     <!-- OPACITY SLIDER -->
@@ -78,7 +78,7 @@
         <label>
             <span class="min">0%</span>
             <span class="max">100%</span>
-            <input type="range" min="0" max="100" value="70" step="1" class="opacity-slider" title="Click and drag the slider to change the opacity of the historic maps">
+            <input type="range" min="0" max="100" value="100" step="1" class="opacity-slider" title="Click and drag the slider to change the opacity of the historic maps">
         </label>
     </div>
 
