--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- ESRI LEAFLET GEOCODER -->
     <link rel="stylesheet" href="https://unpkg.com/esri-leaflet-geocoder@2.2.9/dist/esri-leaflet-geocoder.css">
-    <script src="https://unpkg.com/esri-leaflet-geocoder@2.2.8"></script>5
+    <script src="https://unpkg.com/esri-leaflet-geocoder@2.2.8"></script>
 
     <!-- JQUERY -->
     <script type="text/javascript" src="lib/jquery/jquery-3.1.1.js"></script>
