--- a/index.html
+++ b/index.html
@@ -73,18 +73,29 @@
         <h1>SANBORN MAPS <br> MILWAUKEE</h1>
     </div>
 
+
     <!-- OPACITY SLIDER -->
     <div id="opacity-slider">
-        <label>
-            <span class="min">0%</span>
-            <span class="max">100%</span>
-            <input type="range" min="0" max="100" value="100" step="1" class="opacity-slider" title="Click and drag the slider to change the opacity of the historic maps">
-        </label>
+        <input type="range" min="0" max="100" value="100" step="1" class="opacity-slider" title="Click and drag the slider to change the opacity of the historic maps"  <span class="min">
     </div>
 
+
+    <!-- MAKE HISTORY -->
+    <div id ="make-history-box">
+        <h4 id="make-history-text">Add information about historic buildings</h4>
+    </div>
+
+
+
+
+    <!--&lt;!&ndash; OPACITY SLIDER &ndash;&gt;-->
+    <!--<div id="opacity-slider">-->
+            <!--<input type="range" min="0" max="100" value="100" step="1" class="opacity-slider" title="Click and drag the slider to change the opacity of the historic maps"  <span class="min">-->
+    <!--</div>-->
+
     <!--&lt;!&ndash; BUTTON TO ADD A POINT &ndash;&gt;-->
-    <!--<a id="add-a-point" href="#">-->
-        <!--<div id="cross"></div>-->
+    <!--<a id="make-history" href="#">-->
+        <!--<h4 id="make-history-text">MAKE HISTORY</h4>-->
     <!--</a>-->
 
 
