--- a/index.html
+++ b/index.html
@@ -76,27 +76,23 @@
 
     <!-- OPACITY SLIDER -->
     <div id="opacity-slider">
-        <input type="range" min="0" max="100" value="100" step="1" class="opacity-slider" title="Click and drag the slider to change the opacity of the historic maps"  <span class="min">
+        <input type="range" min="0" max="100" value="80" step="1" class="opacity-slider" title="Click and drag the slider to change the opacity of the historic maps"  <span class="min">
     </div>
 
 
     <!-- MAKE HISTORY -->
     <div id ="make-history-box">
-        <h4 id="make-history-text">Add information about historic buildings</h4>
+		<div id = "options">
+		<p>When clicking the map, I'd like to:</p>
+			<input type = "radio" id="find-history-text" name = "make-history" value = "" checked>
+			<label for="find-history-text">Get library information &nbsp; &nbsp; &nbsp; &nbsp; about map sheets</label>
+			<br>
+			<br>
+			<input type = "radio" id="make-history-text" name = "make-history" value = "">
+			<label for="make-history-text">Give information about &nbsp; &nbsp; &nbsp; &nbsp; historic buildings</label>
+		</div>
     </div>
 
-
-
-
-    <!--&lt;!&ndash; OPACITY SLIDER &ndash;&gt;-->
-    <!--<div id="opacity-slider">-->
-            <!--<input type="range" min="0" max="100" value="100" step="1" class="opacity-slider" title="Click and drag the slider to change the opacity of the historic maps"  <span class="min">-->
-    <!--</div>-->
-
-    <!--&lt;!&ndash; BUTTON TO ADD A POINT &ndash;&gt;-->
-    <!--<a id="make-history" href="#">-->
-        <!--<h4 id="make-history-text">MAKE HISTORY</h4>-->
-    <!--</a>-->
 
 
     <!-- NAVBAR LINKS-->
