create global layer variable

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
     <div id ="make-history-box">
 		<div id = "options">
 		<p>When clicking the map, I'd like to:</p>
-			<input type = "radio" id="find-history-text" name = "make-history" value = "" checked>
+			<input type = "radio" id="find-history-text" name = "click-options" value = "library" checked>
 			<label for="find-history-text">Get library information &nbsp; &nbsp; &nbsp; &nbsp; about map sheets</label>
 			<br>
 			<br>
-			<input type = "radio" id="make-history-text" name = "make-history" value = "">
+			<input type = "radio" id="make-history-text" name = "click-options" value = "patron">
 			<label for="make-history-text">Give information about &nbsp; &nbsp; &nbsp; &nbsp; historic buildings</label>
 		</div>
     </div>
