new singular popup
add buttons

--- a/index.html
+++ b/index.html
@@ -80,18 +80,18 @@
     </div>
 
 
-    <!-- MAKE HISTORY -->
-    <div id ="make-history-box">
-		<div id = "options">
-		<p>When clicking the map, I'd like to:</p>
-			<input type = "radio" id="find-history-text" name = "make-history" value = "" checked>
-			<label for="find-history-text">Get library information &nbsp; &nbsp; &nbsp; &nbsp; about map sheets</label>
-			<br>
-			<br>
-			<input type = "radio" id="make-history-text" name = "make-history" value = "">
-			<label for="make-history-text">Give information about &nbsp; &nbsp; &nbsp; &nbsp; historic buildings</label>
-		</div>
-    </div>
+    <!-- <!-- MAKE HISTORY --> -->
+    <!-- <div id ="make-history-box"> -->
+		<!-- <div id = "options"> -->
+		<!-- <p>When clicking the map, I'd like to:</p> -->
+			<!-- <input type = "radio" id="find-history-text" name = "make-history" value = "" checked> -->
+			<!-- <label for="find-history-text">Get library information &nbsp; &nbsp; &nbsp; &nbsp; about map sheets</label> -->
+			<!-- <br> -->
+			<!-- <br> -->
+			<!-- <input type = "radio" id="make-history-text" name = "make-history" value = ""> -->
+			<!-- <label for="make-history-text">Give information about &nbsp; &nbsp; &nbsp; &nbsp; historic buildings</label> -->
+		<!-- </div> -->
+    <!-- </div> -->
 
 
 
