--- a/index.html
+++ b/index.html
@@ -80,18 +80,15 @@
     </div>
 
 
-    <!-- <!-- MAKE HISTORY --> -->
-    <!-- <div id ="make-history-box"> -->
-		<!-- <div id = "options"> -->
-		<!-- <p>When clicking the map, I'd like to:</p> -->
-			<!-- <input type = "radio" id="find-history-text" name = "make-history" value = "" checked> -->
-			<!-- <label for="find-history-text">Get library information &nbsp; &nbsp; &nbsp; &nbsp; about map sheets</label> -->
-			<!-- <br> -->
-			<!-- <br> -->
-			<!-- <input type = "radio" id="make-history-text" name = "make-history" value = ""> -->
-			<!-- <label for="make-history-text">Give information about &nbsp; &nbsp; &nbsp; &nbsp; historic buildings</label> -->
-		<!-- </div> -->
-    <!-- </div> -->
+    MAKE HISTORY
+    <div id ="make-history-box">
+		<div id = "options">
+		<p>Click on a building to:</p>
+			<li>Get library information &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;about the map sheet</li>
+			<br>
+			<li>Contribute historic &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;information about the &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;building</li>
+		</div>
+    </div>
 
 
 
