Align make history box to layer list

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div id ="make-history-box">
 		<div id = "options">
 		<p>Click on a building to:</p>
-			<li>Get library information &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;about the map sheet</li>
+			<li>Get library information &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;about the map sheet</li>
 			<br>
 			<li>Contribute historic &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;information about the &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;building</li>
 		</div>
