--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             <span class="close-about">&times;</span>
             <p>Placeholder element for development. </p>
             <p>Information about Sanborns, AGSL & project will go here.</p>
+            <p>Marker based on a design created by Alex Kwa from the Noun Project</p>
         </div>
     </div>
     <!-- ABOUT MODAL ENDS HERE (THESE ARE GOING TO BE LONG) -->
