--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
 
 
-    MAKE HISTORY
+    <!--MAKE HISTORY -->
     <div id ="make-history-box">
 		<div id = "options">
 		<p>Click on a building to:</p>
@@ -128,7 +128,13 @@
 
 
     <!-- LINK TO MAIN JAVASCRIPT-->
-    <script type="text/javascript" src="js/main.js"></script>
+	
+	<script type="text/javascript" src="js/main.js"></script> 
+    <!-- <script type="text/javascript" src="js/mapoptions.js"></script> -->
+	<!-- <script type="text/javascript" src="js/opacityslider.js"></script> -->
+	<!-- <script type="text/javascript" src="js/chromesettings.js"></script> -->
+	<!-- <script type="text/javascript" src="js/getdata.js"></script> -->
+	<!-- <script type="text/javascript" src="js/infomodals.js"></script> -->
 
 
 </body>
