Change marker outline opacity, add placeholders for min/max values in opacity slider

--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
 
     <!-- OPACITY SLIDER -->
     <div id="opacity-slider">
-        <input type="range" min="0" max="100" value="80" step="1" class="opacity-slider" title="Click and drag the slider to change the opacity of the historic maps"  <span class="min">
+        <input type="range" min="0" max="100" value="80" step="1" class="opacity-slider" title="Click and drag the slider to change the opacity of the historic maps">
+<!--
+        <span class="min">0</span>
+        <span class="max">100</span>
+-->
     </div>
 
 
