--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     <!-- DATA MODAL -->
     <div id="data-modal" class="modal">
-        <!-- ABOUT MODAL CONTENT -->
+        <!-- DATA MODAL CONTENT -->
         <div class="modal-content">
             <span class="close-data">&times;</span>
             <p>Placeholder element for development. </p>
