--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
     <!-- NAVBAR LINKS-->
     <div id="top-buttons">
         <div class="mobile-buttons">
-            <!-- <div id="data-button">Data</div> -->
             <div id="about-button">About the project</div>
         </div>
     </div>
@@ -101,7 +100,7 @@
             <p><a href="https://github.com/bellegis/sanborn-agsl">Project Github</a></p>
             <div class="custom-header">Credits</div>
             <p>Belle Lipton: Designer / Developer</p>
-            <p><a href="skeetidot.github.io">Lauren Winkler: Designer / Developer</a></p>
+            <p><a href="http://skeetidot.github.io">Lauren Winkler: Designer / Developer</a></p>
             <p>Marker based on a design created by Alex Kwa from the Noun Project</p>
             <div class="custom-header">Special Thanks</div>
             <p>Stephen Appel – Geospatial Information Specialist, American Geographical Society Library</p>
