Open portfolio in new tab

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="custom-header">About the Software</div>
             <p>Have an idea for a mapping project using this atlas? The mosaiced sheets are published and available as a map service <a href="http://webgis.uwm.edu/arcgisuwm/rest/services/AGSL/SanbornMaps/MapServer">here</a>.</p>
             <p>These sheets were georeferenced using ArcMap, and published on the UWM ArcGIS server. The application was built using Leaflet, a light-weight, flexible Javascript library created for web mapping.</p>
-            <p><a href="https://github.com/bellegis/sanborn-agsl">Project Github</a></p>
+            <p><a href="https://github.com/bellegis/sanborn-agsl" target="_blank">Project Github</a></p>
             <div class="custom-header">Credits</div>
             <p>Belle Lipton: Designer / Developer</p>
             <p><a href="https://skeetidot.github.io">Lauren Winkler: Designer / Developer</a></p>
